Opened 7 years ago
Closed 6 years ago
#8010 closed defect (fixed)
Invalid left shift at mpegaudioenc_template.c
| Reported by: | Suhwan | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | avcodec |
| Version: | git-master | Keywords: | ubsan |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
There' an invalid left shift at mpegaudioenc_template.c:704:49
How to reproduce:
% ffmpeg_g -y -r 21 -i tmp.ac3 -map 0 -c:a mp2fixed -c:v zmbv -disposition:a:33 flv -disposition:s:2 msmpeg4v2 -vframes 39 -aframes 40 -ar 22050 -ac 29 -b:v 293k -strict 1 tmp_.mpeg ffmpeg version N-94251-gf83b46e218 Copyright (c) 2000-2019 the FFmpeg developers built with clang version 9.0.0
Attachments (2)
Change History (4)
by , 7 years ago
| Attachment: | gdb_log_8010 added |
|---|
by , 7 years ago
comment:1 by , 7 years ago
| Version: | unspecified → git-master |
|---|
comment:2 by , 6 years ago
| Component: | undetermined → avcodec |
|---|---|
| Priority: | normal → minor |
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed by Michael in a2c97a8342fab6393280cc2f0e2ffb39c381d29c